
User visible changes in Hatari (Python Gtk) UI
----------------------------------------------

2012-01:
- Add microphone and YM voice mixing sound options
- Fix asserts and empty hatari config file caused by
  Hatari v1.6 config variable names changes by changing
  how Hatari config variable types are handled
- Update UI version to v1.1 (mainly due to config change)
- Support spaces in file paths/names

2011-10:
- Replace --slowfdc with --fastfdc

2011-04:
- Support RTC and "keep desktop resolution" options

2011-02:
- Support new tracepoints (AES, DSP, Videl, Crossbar)
- Disasm update for new Hatari disassembly output

2011-01:
- Use new Gtk v2.12 tooltip API
- Support capture cropping

2010-10:
- Improvements to text & key inserting
- Move hatari-console.py elsewhere

2010-05:
- Manual page for Hatari UI

2010-04:
- UI handles Hatari system configuration properly
- New settings dialog for HD dir and image configuration
- Maximum/preferred zoom support to display settings dialog
- Removed --spec512 support
- Option for whether debugger will change to new PC address
  whenever emulation is stopped again

2010-03:
- With the new Hatari --saveconfig option Hatari UI can ask Hatari
  to save its configuration (required by the UI) before the UI itself
  starts, user doesn't need to do it manually anymore
  (if user config is missing or out of date)
- Added --slowfdc support to Floppy settings dialog

2009-09:
- Support for setting CPU level & clock and Falcon DSP type

2009-08:
- Update to latest Hatari 1.3.0:
  - Debug/trace fixes (Hatari 1.3.1 includes these)

2009-07:
- Add Help menu items pointing to Hatari docs & site
- --timer-d support + doc updates

2009-06:
- Move to BerliOS Hatari repo
- Update to latest Hatari 1.2.0:
  - midi in/out, sound freq etc

2008-10:
- Support paths & peripherals settings

2008-09:
- Support for auto frameskip, statusbar and overlay led
- Remove support for multiple machine setups