@@ -432,11 +432,19 @@ class DisplayDialog(HatariUIDialog):
         scalew.set_tooltip_text("Preferred/maximum zoomed width")
         scaleh.set_tooltip_text("Preferred/maximum zoomed height")
 
-        desktop = gtk.CheckButton("Keep desktop resolution (for Falcon/TT)")
-        desktop.set_active(config.get_desktop())
-        desktop.set_tooltip_text("Whether to keep desktop resolution in fullscreen and (try to) scale Atari screen by an integer factor instead")
+        force_max = gtk.CheckButton("Force max resolution (Falcon)")
+        force_max.set_active(config.get_force_max())
+        force_max.set_tooltip_text("Whether to force maximum resolution to help recording videos of demos which do resolution changes")
 
-        borders = gtk.CheckButton("Screen borders")
+        desktop = gtk.CheckButton("Keep desktop resolution (Falcon/TT)")
+        desktop.set_active(config.get_desktop())
+        desktop.set_tooltip_text("Whether to keep screen resolution in fullscreen and (try to) scale Atari screen by an integer factor instead")
+
+        desktop_st = gtk.CheckButton("Keep desktop resolution (ST/STE)")
+        desktop_st.set_active(config.get_desktop_st())
+        desktop_st.set_tooltip_text("Whether to keep screen resolution in fullscreen to avoid potential sound skips + delay (NO SCALING)")
+
+        borders = gtk.CheckButton("Atari screen borders")
         borders.set_active(config.get_borders())
         borders.set_tooltip_text("Whether to show overscan borders in ST/STE low/mid-rez or in Falcon color resolutions. Visible border area is affected by max. zoom size")
 
@@ -462,7 +470,9 @@ class DisplayDialog(HatariUIDialog):
         dialog.vbox.add(gtk.Label("Max zoomed size:"))
         dialog.vbox.add(scalew)
         dialog.vbox.add(scaleh)
+        dialog.vbox.add(force_max)
         dialog.vbox.add(desktop)
+        dialog.vbox.add(desktop_st)
         dialog.vbox.add(borders)
         dialog.vbox.add(statusbar)
         dialog.vbox.add(led)
@@ -473,7 +483,9 @@ class DisplayDialog(HatariUIDialog):
         self.skip = skip
         self.maxw = maxadjw
         self.maxh = maxadjh
+        self.force_max = force_max
         self.desktop = desktop
+        self.desktop_st = desktop_st
         self.borders = borders
         self.statusbar = statusbar
         self.led = led
@@ -489,7 +501,9 @@ class DisplayDialog(HatariUIDialog):
             config.lock_updates()
             config.set_frameskip(self.skip.get_active())
             config.set_max_size(self.maxw.get_value(), self.maxh.get_value())
+            config.set_force_max(self.force_max.get_active())
             config.set_desktop(self.desktop.get_active())
+            config.set_desktop_st(self.desktop_st.get_active())
             config.set_borders(self.borders.get_active())
             config.set_statusbar(self.statusbar.get_active())
             config.set_led(self.led.get_active())
